[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geometric_algebra = "0.3.0"
sdl2 = "0.35.2"
rayon = "1.8.0"

[lib]
name = "renderer"
path = "src/lib.rs"

[[bin]]
name = "renderer_demo"
path = "src/demo.rs"
